@@ -1,3 +1,3 @@
-MD5 9846bff6c3c8af97d4e3ae2700f8dd3a VMware-server-1.0.1-29996.tar.gz 105500734
-RMD160 f4d5805a230afd45ee2234065ffc7c172dd12e18 VMware-server-1.0.1-29996.tar.gz 105500734
-SHA256 08cfa19d9e5475fdaf12114d99bdeecacfd703dd3ec129958bf6f7e98d11641b VMware-server-1.0.1-29996.tar.gz 105500734
+MD5 8cba16d3f6b3723b43d555a5f7cbf850 vmware-any-any-update104.tar.gz 297243
+RMD160 426616f026de409ca057ec1a0913dc9b3d43ef03 vmware-any-any-update104.tar.gz 297243
+SHA256 c0a9efad2677e93ed914e296131916f8b316377644c5d8c716e6575cd58b3c69 vmware-any-any-update104.tar.gz 297243
